--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,16 +1,10 @@
-<div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-      <form (ngSubmit)="onSubmitLogin(loginForm)" #loginForm="ngForm">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-      
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-    </div>
-  </div>
+<form (ngSubmit)="onSubmitLoginForm()" #loginForm="ngForm">
+  <input type="email" name="email" [(ngModel)]="user.email" #email="ngModel" required email>
+  <ul *ngIf="email.errors && email.touched">
+    <li *ngIf="email.errors.required">required</li>
+    <li *ngIf="email.errors.email">not is an email</li>
+  </ul>
+  <input type="password" name="password" [(ngModel)]="user.password" required>
+  <button type="submit" [disabled]="!loginForm.valid">Login</button>
+  <p *ngIf="error">{{ error }}</p>  
+</form>
