--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,13 +1,29 @@
-<form (ngSubmit)="onSubmitLoginForm()" #loginForm="ngForm">
-  <input type="email" name="email" [(ngModel)]="user.email" #email="ngModel" required email>
-  <ul *ngIf="email.errors && email.touched">
-    <li *ngIf="email.errors.required">required</li>
-    <li *ngIf="email.errors.email">not is an email</li>
-  </ul>
-  <input type="password" name="password" [(ngModel)]="user.password" #password="ngModel" required>
-  <ul *ngIf="password.errors && password.touched">
-      <li *ngIf="password.errors.required">required</li>
-    </ul>
-  <button type="submit" [disabled]="!loginForm.valid">Login</button>
-  <p *ngIf="error">{{ error }}</p>  
-</form>
+<div class="container" style="margin-top: 50px;">
+    <div class="row justify-content-center">
+     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+     <form (ngSubmit)="onSubmitLoginForm()" #loginForm="ngForm">
+       <div class="form-group">
+       <label for="email">Email </label>
+       <input type="email" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" placeholder="youremail@service.ex" required email>
+       <ul *ngIf="email.errors && email.touched">
+         <li *ngIf="email.errors.required">Required</li>
+         <li *ngIf="email.errors.email">not is an email</li>
+       </ul>
+     </div>
+
+     <div class="form-group">
+       <label for="password">Password</label>
+       <input type="password" class="form-control" name="password" [(ngModel)]="user.password" #password="ngModel" placeholder="Ex: 1234" required>
+         <ul *ngIf="password.errors && password.touched">
+         <li *ngIf="password.errors.required">Required</li>
+       </ul>
+      </div>
+
+      <div class="justify-content-center d-flex">
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">Sign up</button>
+        <p *ngIf="error">{{ error }}</p>  
+      </div>
+   </form>
+   </div>
+   </div>
+   </div>
