--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -1,29 +1,53 @@
-<form (ngSubmit)="onSubmitSignupForm()" #signupForm="ngForm">
-  <input type="text" name="name" [(ngModel)]="user.name" #name="ngModel" required name>
-  <ul *ngIf="name.errors && name.touched">
-      <li *ngIf="name.errors.required">required</li>
-      <li *ngIf="name.errors.name">not is an name</li>
-    </ul>
-  <input type="email" name="email" [(ngModel)]="user.email" #email="ngModel" required email>
-  <ul *ngIf="email.errors && email.touched">
-    <li *ngIf="email.errors.required">required</li>
-    <li *ngIf="email.errors.email">not is an email</li>
-  </ul>
-  <input type="password" name="password" [(ngModel)]="user.password" required>
-  <ul *ngIf="password.errors && password.touched">
-      <li *ngIf="password.errors.required">required</li>
-    </ul>
-  <input type="text" name="role" [(ngModel)]="user.role" #role="ngModel" required role>
-  <ul *ngIf="role.errors && role.touched">
-      <li *ngIf="role.errors.required">required</li>
-      <li *ngIf="role.errors.role">not is an role</li>
-    </ul>
-    <input type="text" name="city" [(ngModel)]="user.city" #city="ngModel" required city>
-    <ul *ngIf="city.errors && city.touched">
-        <li *ngIf="city.errors.required">required</li>
-        <li *ngIf="city.errors.city">not is an city</li>
-      </ul>
+<div class="container" style="margin-top: 50px;">
+    <div class="row justify-content-center">
+     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+     <form (ngSubmit)="onSubmitSignupForm()" #signupForm="ngForm">
+       <div class="form-group">
+       <label for="email">Email </label>
+       <input type="email" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" placeholder="youremail@service.ex" required email>
+       <ul *ngIf="email.errors && email.touched">
+         <li *ngIf="email.errors.required">Required</li>
+         <li *ngIf="email.errors.email">not is an email</li>
+       </ul>
+     </div>
 
-  <button type="submit" [disabled]="!signupForm.valid">Signup</button>
-  <p *ngIf="error">{{ error }}</p>  
-</form>
+     <div class="form-group">
+       <label for="password">Password</label>
+       <input type="password" class="form-control" name="password" [(ngModel)]="user.password" #password="ngModel" placeholder="Ex: 1234" required>
+         <ul *ngIf="password.errors && password.touched">
+         <li *ngIf="password.errors.required">Required</li>
+       </ul>
+     </div>
+
+     <div class="form-group">
+        <label for="role">Role</label>
+        <input type="string" class="form-control" name="role" [(ngModel)]="user.role" #role="ngModel" placeholder="Parent/Carer" required>
+          <ul *ngIf="role.errors && role.touched">
+          <li *ngIf="role.errors.required">Required</li>
+        </ul>
+      </div>
+
+      <div class="form-group">
+          <label for="name">Name</label>
+          <input type="name" class="form-control" name="name" [(ngModel)]="user.name" #name="ngModel" placeholder="Juan" required>
+            <ul *ngIf="name.errors && name.touched">
+            <li *ngIf="name.errors.required">Required</li>
+          </ul>
+        </div>
+
+        <div class="form-group">
+            <label for="city">city</label>
+            <input type="city" class="form-control" name="city" [(ngModel)]="user.city" #city="ngModel" placeholder="La Habana" required>
+              <ul *ngIf="city.errors && city.touched">
+              <li *ngIf="city.errors.required">Required</li>
+            </ul>
+          </div>
+
+      <div class="justify-content-center d-flex">
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!signupForm.valid">Sign up</button>
+        <p *ngIf="error">{{ error }}</p>  
+      </div>
+   </form>
+   </div>
+   </div>
+   </div>
