feat: create models event/valoration

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,5 @@
-<div class="jumbotron">
-    <h1 class="display-4">Time Care</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p> uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </p>
-  </div>
+<div class="container">
+    <img src="https://png.pngtree.com/element_origin_min_pic/16/08/25/2257befafd21af1.jpg" class="img-fluid" alt="Responsive image">
+    
   
+  </div>
