--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url("https://png.pngtree.com/element_origin_min_pic/16/08/25/2257befafd21af1.jpg")
+
+}  
