feat: create component event-list

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,11 @@
 <div class="container">
-    <img src="https://png.pngtree.com/element_origin_min_pic/16/08/25/2257befafd21af1.jpg" class="img-fluid" alt="Responsive image">
-    
-  
+    <img src="http://www.clker.com/cliparts/f/V/l/8/j/F/baby-elephant-red-hi.png" width="450px">
+   
+     <button type="button" class="btn btn-primary" [routerLink]="['/event/form']">form</button>
+
+   
+   
+     <button type="button" class="btn btn-primary" [routerLink]="['/event/list']">list</button>
+
+   
   </div>
