--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row justify-content-center">
-     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+     <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
      <form (ngSubmit)="onSubmitLoginForm()" #loginForm="ngForm">
+       
        <div class="form-group">
        <label for="email">Email </label>
        <input type="email" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" placeholder="youremail@service.ex" required email>
@@ -20,7 +21,7 @@
       </div>
 
       <div class="justify-content-center d-flex">
-        <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">Sign up</button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">Login</button>
         <p *ngIf="error">{{ error }}</p>  
       </div>
    </form>
