--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row justify-content-center">
-     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+     <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
      <form (ngSubmit)="onSubmitSignupForm()" #signupForm="ngForm">
        <div class="form-group">
        <label for="email">Email </label>
