--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <img src="http://www.clker.com/cliparts/f/V/l/8/j/F/baby-elephant-red-hi.png" width="450px">
    
-     <button type="button" class="btn btn-primary" [routerLink]="['/event/form']">form</button>
+     <button type="button" class="btn btn-primary" [routerLink]="['/event/create']">Create</button>
 
    
    
