--- a/src/app/components/event/create/create.component.html
+++ b/src/app/components/event/create/create.component.html
@@ -1,10 +1,12 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row justify-content-center">
      <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
-     <form (ngSubmit)="onSubmitEventForm()" #eventForm="ngForm">
+     <form (ngSubmit)="onSubmitCreateForm()" #createForm="ngForm">
+
+      
        <div class="form-group">
-       <label for="title">Title </label>
-       <input type="string" class="form-control" name="title" [(ngModel)]="user.title" #title="ngModel" placeholder="yourtitle@service.ex" required title>
+       <label for="title">Title</label>
+       <input type="text" class="form-control" name="title" [(ngModel)]="user.title" #title="ngModel" required title>
        <ul *ngIf="title.errors && title.touched">
          <li *ngIf="title.errors.required">Required</li>
          <li *ngIf="title.errors.title">not is an title</li>
@@ -13,7 +15,7 @@
 
      <div class="form-group">
        <label for="description">Description</label>
-       <input type="textarea" rows="2" cols="2" class="form-control" name="description" [(ngModel)]="user.description" #description="ngModel" placeholder="Ex: 1234" required>
+       <input type="text" class="form-control" name="description" [(ngModel)]="user.description" #description="ngModel" required>
          <ul *ngIf="description.errors && description.touched">
          <li *ngIf="description.errors.required">Required</li>
        </ul>
@@ -21,7 +23,7 @@
 
      <div class="form-group">
         <label for="price">Price</label>
-        <input type="number" class="form-control" name="price" min="0" [(ngModel)]="user.price" #price="ngModel" placeholder="$" required>
+        <input type="number" class="form-control" name="price" [(ngModel)]="user.price" #price="ngModel"  required>
           <ul *ngIf="price.errors && price.touched">
           <li *ngIf="price.errors.required">Required</li>
         </ul>
@@ -29,7 +31,7 @@
 
       <div class="form-group">
           <label for="days">Days</label>
-          <input type="date" class="form-control" name="days" [(ngModel)]="user.days" #days="ngModel" placeholder="Juan" required>
+          <input type="data" class="form-control" name="days" [(ngModel)]="user.days" #days="ngModel" required>
             <ul *ngIf="days.errors && days.touched">
             <li *ngIf="days.errors.required">Required</li>
           </ul>
@@ -37,7 +39,7 @@
 
         <div class="form-group">
             <label for="startTime">Start time</label>
-            <input type="time" value="00:00" class="form-control" name="startTime" [(ngModel)]="user.startTime" #startTime="ngModel" placeholder="La Habana" required>
+            <input type="number" class="form-control" name="startTime" [(ngModel)]="user.startTime" #startTime="ngModel"  required>
               <ul *ngIf="startTime.errors && startTime.touched">
               <li *ngIf="startTime.errors.required">Required</li>
             </ul>
@@ -45,18 +47,21 @@
 
           <div class="form-group">
               <label for="endTime">End time</label>
-              <input type="time" value="00:00" class="form-control" name="endTime" [(ngModel)]="user.endTime" #endTime="ngModel" placeholder="La Habana" required>
+              <input type="number" class="form-control" name="endTime" [(ngModel)]="user.endTime" #endTime="ngModel" required>
                 <ul *ngIf="endTime.errors && endTime.touched">
                 <li *ngIf="endTime.errors.required">Required</li>
               </ul>
             </div>
 
       <div class="justify-content-center d-flex">
-        <button type="submit" class="btn btn-primary btn-block" [disabled]="!eventForm.valid">Send</button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!createForm.valid">Create</button>
         <p *ngIf="error">{{ error }}</p>  
-        
       </div>
    </form>
    </div>
    </div>
    </div>
+
+
+   
+   
