--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,18 @@
 
+  
+
 <div class="container">
   <h1>
     No sabes con quien dejar a tus hijos???
-
   </h1>
-  <img src="https://i.pinimg.com/originals/f9/13/6e/f9136ee922b02f68a2ceeee68c757c61.png" width="550px"> 
-  <p>
-    
-    
-
-
-  </p>
-   <button type="button" class="btn btn-primary" [routerLink]="['/login']">Login</button>
-   <button type="button" class="btn btn-primary" [routerLink]="['/signup']">Signup</button>
+    <div>
+    <img src="https://3.bp.blogspot.com/-LB-I3GmvNxA/WLX7527ES3I/AAAAAAAA_pk/Xkv4FBSeNBkKxe6_um3Nc6NnfRERa3TQgCLcB/s1600/s-236.gif">
+    </div>
+    <h2>
+      Esta es tu pagina!!!
+    </h2>
+<div>
+<img src="https://s10.favim.com/orig/160510/homero-simpson-dance-lisa-gif-Favim.com-4296295.gif">
+</div>
+  
 </div>
