--- a/src/app/components/event/create/create.component.html
+++ b/src/app/components/event/create/create.component.html
@@ -1,12 +1,18 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row justify-content-center">
      <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
-     <form (ngSubmit)="onSubmitCreateForm()" #createForm="ngForm">
+     <form (ngSubmit)="onSubmitCreateForm(createForm)" #createForm="ngForm">
 
-      
+
+        <div class="form-group">
+            <img height="300"[src]="event.image" />
+
+          </div>
+
+
        <div class="form-group">
        <label for="title">Title</label>
-       <input type="text" class="form-control" name="title" [(ngModel)]="user.title" #title="ngModel" required title>
+       <input type="text" class="form-control" name="title" [(ngModel)]="event.title" #title="ngModel" required title>
        <ul *ngIf="title.errors && title.touched">
          <li *ngIf="title.errors.required">Required</li>
          <li *ngIf="title.errors.title">not is an title</li>
@@ -15,7 +21,7 @@
 
      <div class="form-group">
        <label for="description">Description</label>
-       <input type="text" class="form-control" name="description" [(ngModel)]="user.description" #description="ngModel" required>
+       <input type="text" class="form-control" name="description" [(ngModel)]="event.description" #description="ngModel" required>
          <ul *ngIf="description.errors && description.touched">
          <li *ngIf="description.errors.required">Required</li>
        </ul>
@@ -23,7 +29,7 @@
 
      <div class="form-group">
         <label for="price">Price</label>
-        <input type="number" class="form-control" name="price" [(ngModel)]="user.price" #price="ngModel"  required>
+        <input type="number" class="form-control" name="price" [(ngModel)]="event.price" #price="ngModel"  required>
           <ul *ngIf="price.errors && price.touched">
           <li *ngIf="price.errors.required">Required</li>
         </ul>
@@ -31,7 +37,7 @@
 
       <div class="form-group">
           <label for="days">Days</label>
-          <input type="data" class="form-control" name="days" [(ngModel)]="user.days" #days="ngModel" required>
+          <input type="date" class="form-control" name="days" [(ngModel)]="event.days" #days="ngModel" required>
             <ul *ngIf="days.errors && days.touched">
             <li *ngIf="days.errors.required">Required</li>
           </ul>
@@ -39,7 +45,7 @@
 
         <div class="form-group">
             <label for="startTime">Start time</label>
-            <input type="number" class="form-control" name="startTime" [(ngModel)]="user.startTime" #startTime="ngModel"  required>
+            <input type="time" class="form-control" name="startTime" [(ngModel)]="event.startTime" #startTime="ngModel"  required>
               <ul *ngIf="startTime.errors && startTime.touched">
               <li *ngIf="startTime.errors.required">Required</li>
             </ul>
@@ -47,7 +53,7 @@
 
           <div class="form-group">
               <label for="endTime">End time</label>
-              <input type="number" class="form-control" name="endTime" [(ngModel)]="user.endTime" #endTime="ngModel" required>
+              <input type="time" class="form-control" name="endTime" [(ngModel)]="event.endTime" #endTime="ngModel" required>
                 <ul *ngIf="endTime.errors && endTime.touched">
                 <li *ngIf="endTime.errors.required">Required</li>
               </ul>
@@ -55,7 +61,7 @@
 
       <div class="justify-content-center d-flex">
         <button type="submit" class="btn btn-primary btn-block" [disabled]="!createForm.valid">Create</button>
-        <p *ngIf="error">{{ error }}</p>  
+          <p *ngIf="error">{{ error }}</p>  
       </div>
    </form>
    </div>
