--- a/src/app/components/event/list/list.component.html
+++ b/src/app/components/event/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text">
     <a [routerLink]="['/event']">
       <i class="fa fa-plus"></i>
     </a>
@@ -15,5 +15,10 @@
         <a [routerLink]="['/event', event.id]"> Ver mas... </a>
     </div>
   </div>
-  <button type="button" class="btn btn-primary" [routerLink]="['/event/create']"> Create Evento</button>
-  
+ </div>
+
+  <div class="btn-wrapper" >
+   <button type="button" class="btn btn-primary" [routerLink]="['/event/create']"> Create Evento</button>
+   <button type="button" class="btn btn-primary"> Niñeras y Canguros</button>
+  </div>
+  </div>
