feat:Create component map

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -5,3 +5,10 @@
     font-weight: 300;
 
 }
+.imagen {
+    background-image: url("https://static7.depositphotos.com/1012125/706/i/950/depositphotos_7069859-stock-photo-doodle-kids-playing-on-a.jpg");
+    background-repeat: no-repeat;
+    
+    
+    
+}
