--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 
   
 
-<div class="container text" >
+<div class="container text imagen" >
   <h1>
     No sabes con quien dejar a tus hijos???
   </h1>
@@ -11,8 +11,7 @@
     <h2>
       Esta es tu pagina!!!
     </h2>
-<div>
-<img src="https://s10.favim.com/orig/160510/homero-simpson-dance-lisa-gif-Favim.com-4296295.gif">
-</div>
-  
-</div>
+
+    
+  </div>
+<app-maps></app-maps>
