--- a/src/app/components/event/create/create.component.html
+++ b/src/app/components/event/create/create.component.html
@@ -14,8 +14,8 @@
      </div>
 
      <div class="form-group">
-       <label for="description">Description</label>
-       <input type="text" class="form-control" name="description" [(ngModel)]="event.description" #description="ngModel" required>
+        <label for="exampleFormControlTextarea1">Description</label>
+       <textarea class="form-control" id="exampleFormControlTextarea1" name="description" rows="3" [(ngModel)]="event.description" #description="ngModel" required></textarea> 
          <ul *ngIf="description.errors && description.touched">
          <li *ngIf="description.errors.required">Required</li>
        </ul>
@@ -23,7 +23,7 @@
 
      <div class="form-group">
         <label for="price">Price</label>
-        <input type="number" class="form-control" name="price" [(ngModel)]="event.price" #price="ngModel"  required>
+        <input type="number" class="form-control" name="price" min="0" [(ngModel)]="event.price" #price="ngModel" placeholder="€" required>
           <ul *ngIf="price.errors && price.touched">
           <li *ngIf="price.errors.required">Required</li>
         </ul>
