feat: create profile,delete about

--- a/src/app/components/event/list/list.component.css
+++ b/src/app/components/event/list/list.component.css
@@ -20,7 +20,9 @@ container {
 
 }
 .card {
-    background-color:rgb(230,242,252);
+    background-color:rgb(214,235,240);
     border-radius: 15%;
     margin-top: 20px;
+    box-shadow: 10px 10px 5px grey;
+
 }
