--- a/src/app/components/event/list/list.component.html
+++ b/src/app/components/event/list/list.component.html
@@ -19,6 +19,6 @@
 
   <div class="btn-wrapper" >
    <button type="button" class="btn btn-primary" [routerLink]="['/event/create']"> Create Evento</button>
-   <button type="button" class="btn btn-primary"> Niñeras y Canguros</button>
+   <button type="button" class="btn btn-primary" [routerLink]="['/profile']"> Perfil </button>
   </div>
   </div>
