--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,17 @@
-<div class="container">
-    <img src="http://www.clker.com/cliparts/f/V/l/8/j/F/baby-elephant-red-hi.png" width="450px">
-   
-     <button type="button" class="btn btn-primary" [routerLink]="['/event/create']">Create</button>
-
-   
-   
-     <button type="button" class="btn btn-primary" [routerLink]="['/event/list']">list</button>
+<img src="https://static.boredpanda.com/blog/wp-content/org_uploads/2013/10/dsc_9662a__880.jpg" alt="">
+<div class="container imagen">
+    <h1 class="text">
+        Timecare
+      </h1>
+    
+     
 
    
   </div>
+
+
+
+  
+    
+      
+    
