--- a/src/app/components/maps/maps.component.html
+++ b/src/app/components/maps/maps.component.html
@@ -18,7 +18,7 @@
   [latitude]="lat"
   [longitude]="lng"
   (mapClick)="mapClicked($event)"
-  [zoom]="15">
+  [zoom]="16">
 
   <agm-marker 
     *ngFor="let m of markers; let i = index"
@@ -31,13 +31,9 @@
     (mouseOut)="fueraMouse(m)">
 
     <agm-info-window>
-      <strong>Titulo</strong>
-      <p>
-        parrafo
-      </p>
+      <strong>Ventana Marcador</strong>
       <div>
-        <button>Editar</button>
-        <button>Borrar</button>
+        {{m.title}}
       </div>
     </agm-info-window>
 
