--- a/src/app/components/misc/navbar/navbar.component.html
+++ b/src/app/components/misc/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" [routerLink]="['/about']">
+    <a class="navbar-brand" [routerLink]="['/']">
         <img src="https://cdn1.iconfinder.com/data/icons/eyes-set/100/eye3-01-128.png" width="40" height="40" alt="">
       </a>
-  <a class="navbar-brand" [routerLink]="['/about']">Timecare</a>
+  <a class="navbar-brand" [routerLink]="['/']">Timecare</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -16,9 +16,6 @@
         <a class="nav-link" [routerLink]="['/signup']" href="#">Signup</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+   
   </div>
 </nav>
