--- a/src/app/components/misc/signup/signup.component.css
+++ b/src/app/components/misc/signup/signup.component.css
@@ -1,5 +1,5 @@
 .form-background {
-    background-color: rgb(230, 242, 252);
+    background-color:rgb(214,235,240);
     padding: 15px 15px;
     border-radius: 10px;
     box-shadow: 10px 10px 10px grey;
