--- a/src/app/components/event/create/create.component.html
+++ b/src/app/components/event/create/create.component.html
@@ -53,6 +53,22 @@
               </ul>
             </div>
 
+            <div class="form-group">
+                <label for="endTime">Phone</label>
+                <input type="number" class="form-control" name="phone" [(ngModel)]="event.phone" #phone="ngModel" placeholder="(0034)"required>
+                  <ul *ngIf="phone.errors && phone.touched">
+                  <li *ngIf="phone.errors.required">Required</li>
+                </ul>
+              </div>
+
+              <div class="form-group">
+                  <label for="endTime">Email</label>
+                  <input type="text" class="form-control" name="email" [(ngModel)]="event.email" #email="ngModel"placeholder="@email.com" required>
+                    <ul *ngIf="email.errors && email.touched">
+                    <li *ngIf="email.errors.required">Required</li>
+                  </ul>
+                </div>
+
       <div class="justify-content-center d-flex">
         <button type="submit" class="btn btn-primary btn-block" [disabled]="!createForm.valid">Create</button>
          <p *ngIf="error">{{ error }}</p>  
