--- a/src/app/components/event/list/list.component.html
+++ b/src/app/components/event/list/list.component.html
@@ -18,7 +18,7 @@
  </div>
 
   <div class="btn-wrapper" >
-   <button type="button" class="btn btn-primary" [routerLink]="['/event/create']"> Create Evento</button>
-   <button type="button" class="btn btn-primary" [routerLink]="['/profile']"> Perfil </button>
+  <button type="button" class="btn btn-lg btn-success" [routerLink]="['/event/create']">Crear Evento</button>
+  <button type="button" class="btn btn-warning" [routerLink]="['/profile']"> Perfil </button>
   </div>
   </div>
