--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="justify-content-center d-flex">
-        <button type="submit" class="btn btn-info btn-block" [disabled]="!loginForm.valid">Login</button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">Login</button>
         <p *ngIf="error">{{ error }}</p>  
       </div>
    </form>
