--- a/src/app/components/misc/navbar/navbar.component.html
+++ b/src/app/components/misc/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: rgb(218,235,239);">
     <a class="navbar-brand" [routerLink]="['/']">
         <img src="https://cdn1.iconfinder.com/data/icons/eyes-set/100/eye3-01-128.png" width="40" height="40" alt="">
       </a>
