--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -44,7 +44,7 @@
           </div>
 
       <div class="justify-content-center d-flex">
-        <button type="submit" class="btn btn-info btn-block" [disabled]="!signupForm.valid">Sign up</button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!signupForm.valid">Sign up</button>
         <p *ngIf="error">{{ error }}</p>  
       </div>
    </form>
