--- a/src/app/components/misc/navbar/navbar.component.html
+++ b/src/app/components/misc/navbar/navbar.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/signup']" href="#">Signup</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']" href="#">Logaut</a>
+        </li>
     </ul>
    
   </div>
