--- a/src/app/components/event/create/create.component.html
+++ b/src/app/components/event/create/create.component.html
@@ -67,7 +67,8 @@
       </div>
    </form>
    </div>
-   </div>
+  </div>
+  <button type="button" class="btn btn-warning" [routerLink]="['/profile']"> Perfil </button>
    </div>
 
 
