--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,10 +1,10 @@
 .text {
     margin-top: 10px;
     text-align: center;
-    color: rgb(2, 2, 4);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-family: fantasy;
     font-weight: 600px;
-    font-size: 150px;
+    font-size: 180px;
 
 }
 img {
