--- a/src/app/components/misc/navbar/navbar.component.html
+++ b/src/app/components/misc/navbar/navbar.component.html
@@ -16,8 +16,11 @@
         <a class="nav-link" [routerLink]="['/signup']" href="#">Signup</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/login']" href="#">Logaut</a>
-        </li>
+          <li>
+              <a class="nav-link" (click)="onClickLogout()">Logout</a>
+            </li>
+           
+       
     </ul>
    
   </div>
