--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,7 @@
-<div class="container" style="margin-top: 50px;">
+  <div class="container" style="margin-top: 50px;"> 
   <div class="row justify-content-center">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
-   <form (ngSubmit)="onSubmitSignupForm()" #signupForm="ngForm">
+   <form (ngSubmit)="onSubmitValorationForm()" #valorationForm="ngForm">
 
      <div class="form-group">
      <label for="generalRating">GeneralRating </label>
@@ -57,9 +57,9 @@
  </form>
 </div>
 </div>
-     <div class="content-wrapper-div profile-buttons">
-        <button type="button" class="btn btn-lg btn-success" [routerLink]="['/event/create']">Lista de Cuidadores</button>
+     <div>
+        <button type="button" class="btn btn-lg btn-success" [routerLink]="['userList']">Lista de Cuidadores</button>
       </div>
         
      
- </div>
+ </div> 
