--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,11 @@
-<img src="https://static.boredpanda.com/blog/wp-content/org_uploads/2013/10/dsc_9662a__880.jpg" alt="">
+<img src="https://i.ytimg.com/vi/Jy7Hp6bvlho/maxresdefault.jpg" alt="">
 <div class="container imagen">
     <h1 class="text">
         Timecare
       </h1>
-    
+    <p>
+        We take care of your marvellous kids <br/> when you are enjoying the world outside
+    </p>
      
 
    
