--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .text {
-    margin-top: 10px;
+    margin-top: 100px;
     text-align: center;
     color: white;
     font-family: fantasy;
@@ -13,4 +13,11 @@ img {
     position: absolute;
     z-index: -2;
     min-width: 100%;
+}
+
+p {
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 30px; 
 }
