--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -52,7 +52,7 @@
 
     <div class="justify-content-center d-flex">
       <button type="submit" class="btn btn-primary btn-block" [disabled]="!valorationForm.valid">Dejar Valoracion</button>
-      <p *ngIf="error">{{ error }}</p>  
+      <p *ngIf="apiError">{{apiError }}</p>  
     </div>
  </form>
 </div>
