--- a/src/app/components/misc/login/login.component.html
+++ b/src/app/components/misc/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 50px;">
     <div class="row justify-content-center">
      <div class="col-xs-12 col-sm-4 col-sm-offset-4 form-background">
-     <form (ngSubmit)="onSubmitLoginForm()" #loginForm="ngForm">
+     <form (ngSubmit)="onSubmitLoginForm(loginForm)" #loginForm="ngForm">
        
        <div class="form-group">
        <label for="email">Email </label>
@@ -22,7 +22,7 @@
 
       <div class="justify-content-center d-flex">
         <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">Login</button>
-        <p *ngIf="error">{{ error }}</p>  
+        <p *ngIf="apiError">{{ apiError }}</p>  
       </div>
    </form>
    </div>
