--- a/src/app/components/misc/signup/signup.component.html
+++ b/src/app/components/misc/signup/signup.component.html
@@ -46,7 +46,7 @@
 
       <div class="justify-content-center d-flex">
         <button type="submit" class="btn btn-primary btn-block" [disabled]="!signupForm.valid">Sign up</button>
-        <p *ngIf="error">{{ error }}</p>  
+        <p *ngIf="apiError">{{ apiError }}</p>  
       </div>
    </form>
    </div>
