--- a/src/app/components/misc/navbar/navbar.component.html
+++ b/src/app/components/misc/navbar/navbar.component.html
@@ -9,16 +9,18 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li *ngIf="!user" class="nav-item active">
         <a class="nav-link" [routerLink]="['/login']" href="#">Login</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!user" class="nav-item">
         <a class="nav-link" [routerLink]="['/signup']" href="#">Signup</a>
       </li>
-      <li class="nav-item">
-          <li>
-              <a class="nav-link" (click)="onClickLogout()">Logout</a>
-            </li>
+      <li *ngIf="user" class="nav-item">
+          <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+      </li>
+      <li *ngIf="user" class="nav-item">
+        <a class="nav-link" (click)="onClickLogout()">Logout</a>
+      </li>
            
        
     </ul>
